# dexscreener-cli-mcp-tool

./: .gitignore  CLAUDE.md  GOD_PROMPT.md  RATE_LIMIT_STRATEGY.md  README.md  SKILL.md  install.bat  install.sh  pyproject.toml  showcase.ps1  test_ui.bat
dexscreener_cli/: __init__.py  alerts.py  cli.py  client.py  config.py  holders.py  mcp_server.py  models.py  scanner.py  scoring.py  state.py  task_runner.py  ui.py
docs/: IMPLEMENTATION_PLAN.md  NEXT_TASKS.md  SHIP_PRIORITY_STATUS.md  UI_UX_SPEC.md
tests/: test_scanner.py  test_scoring.py  test_security.py  test_state.py
