[project]
name = "dexscreener-cli-mcp-tool"
version = "0.1.0"
description = "Dexscreener Unofficial CLI + MCP + Skills - free token scanner with AI agent support"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "vibeforge1111" }]
dependencies = [
  "httpx>=0.27.2",
  "mcp>=1.13.0",
  "python-dotenv>=1.0.0",
  "rich>=13.9.4",
  "typer>=0.12.5",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.8",
]

[project.scripts]
ds = "dexscreener_cli.cli:app"
dexscreener-mcp = "dexscreener_cli.mcp_server:main"

[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["dexscreener_cli*"]
